Refactor api-key related services
